--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
+  "homepage": "https://Tiwari6410.github.io/Spiggy_Food",
   "name": "javascriptwitharvindcoder",
   "version": "1.0.0",
   "description": "",
   "main": "App.js",
   "scripts": {
     "start": "parcel index.html",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "parcel build index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@testing-library/react": "^14.1.0",
+    "babel-jest": "file:babel/core@babel/present-env",
+    "gh-pages": "^6.0.0",
+    "jest": "^29.7.0",
     "parcel": "^2.10.0",
     "postcss": "^8.4.31",
     "process": "^0.11.10",
@@ -20,6 +29,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0"
   }
